Summary: | ASTERISK-25829: res_pjsip: PJSIP does not accept spaces when separating multiple AORs | ||
Reporter: | Mateusz Kowalski (mkowalski) | Labels: | |
Date Opened: | 2016-03-02 10:36:01.000-0600 | Date Closed: | 2016-03-08 11:59:11.000-0600 |
Priority: | Minor | Regression? | |
Status: | Closed/Complete | Components: | Resources/res_pjsip |
Versions: | 13.7.2 | Frequency of Occurrence | Constant |
Related Issues: | |||
Environment: | Attachments: | ||
Description: | Hi,
I have just noticed a behaviour which you'd probably would like to change. As reported in community - https://community.asterisk.org/t/realtime-pjsip-and-multiple-aors - when using PJSIP in Realtime mode, I want to assign more than one AOR to a particular endpoint insert into ps_endpoints (id, transport, aors, context, allow, direct_media) values ('kamailio', 'transport-udp', '101, 102, 103, 104, 105', 'testing', 'all', 'yes'); Unfortunately in this example, only AOR "101" will be allowed and rest of them is going to be ignored. When I correct it to insert into ps_endpoints (id, transport, aors, context, allow, direct_media) values ('kamailio', 'transport-udp', '101,102,103,104,105', 'testing', 'all', 'yes'); everything works correctly, so it looks like comma is considered as a valid separator, but comma followed by space is not. Regards, -- Mateusz | ||
Comments: | By: Asterisk Team (asteriskteam) 2016-03-02 10:36:02.114-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: George Joseph (gjoseph) 2016-03-06 15:16:44.882-0600 This issue actually affects config files as well, not just realtime and affects mailboxes, ciphers, contacts, and other comma-separated lists. |