res_pjsip:  Add " " as a separator in comma-separated parameter lists

Configurations like "aors = a, b, c" were ignoring everything after "a"
because a space isn't considered a valid separator.  Same for mailboxes,
ciphers, contacts and a few others.

To fix, all the strsep(&copy, ",") calls have been changed to
strtok_r(NULL, ", ", &copy).  The change from strsep to strtok_r was necessary
because strtok_r collapses consecutive separators where strsep doesn't.

There was also an attempt to ast_free an ast_strdupa'd string in
ast_sip_for_each_aor which was causing a SEGV.  I removed it.

Although this issue was reported for realtime, the issue was in the res_pjsip
modules so all config mechanisms were affected.

ASTERISK-25829 #close
Reported-by: Mateusz Kowalski

Change-Id: I0b22a2cf22a7c1c50d4ecacbfa540155bec0e7a2