res/res_pjsip/config_transport.c
@@ -985,7 +985,7 @@ static int transport_tls_cipher_handler(const struct aco_option *opt, struct ast
 	}
 
 	parse = ast_strdupa(S_OR(var->value, ""));
-	while ((name = strsep(&parse, ","))) {
+	while ((name = strtok_r(NULL, ", ", &parse))) {
 		name = ast_strip(name);
 		if (ast_strlen_zero(name)) {
 			continue;
