res/res_pjsip/location.c
@@ -205,7 +205,7 @@ void ast_sip_location_retrieve_contact_and_aor_from_list(const char *aor_list, s
 	*aor = NULL;
 	*contact = NULL;
 
-	while ((aor_name = strsep(&rest, ","))) {
+	while ((aor_name = strtok_r(NULL, ", ", &rest))) {
 		*aor = ast_sip_location_retrieve_aor(aor_name);
 
 		if (!(*aor)) {
@@ -377,7 +377,7 @@ static int permanent_uri_handler(const struct aco_option *opt, struct ast_variab
 	}
 
 	contacts = ast_strdupa(var->value);
-	while ((contact_uri = strsep(&contacts, ","))) {
+	while ((contact_uri = strtok_r(NULL, ", ", &contacts))) {
 		struct ast_sip_contact *contact;
 		struct ast_sip_contact_status *status;
 		char hash[33];
@@ -442,7 +442,7 @@ int ast_sip_for_each_aor(const char *aors, ao2_callback_fn on_aor, void *arg)
 	}
 
 	copy = ast_strdupa(aors);
-	while ((name = strsep(&copy, ","))) {
+	while ((name = strtok_r(NULL, ", ", &copy))) {
 		RAII_VAR(struct ast_sip_aor *, aor,
 			 ast_sip_location_retrieve_aor(name), ao2_cleanup);
 
@@ -454,7 +454,6 @@ int ast_sip_for_each_aor(const char *aors, ao2_callback_fn on_aor, void *arg)
 			return -1;
 		}
 	}
-	ast_free(copy);
 	return 0;
 }
 
