res/res_pjsip/pjsip_options.c
@@ -281,7 +281,7 @@ static int on_endpoint(void *obj, void *arg, int flags)
 	}
 
 	aors = ast_strdupa(endpoint->aors);
-	while ((aor_name = strsep(&aors, ","))) {
+	while ((aor_name = strtok_r(NULL, ", ", &aors))) {
 		struct ast_sip_aor *aor;
 		struct ao2_container *contacts;
 
@@ -806,7 +806,7 @@ static int cli_qualify_contacts(void *data)
 	}
 
 	aors = ast_strdupa(endpoint->aors);
-	while ((aor_name = strsep(&aors, ","))) {
+	while ((aor_name = strtok_r(NULL, ", ", &aors))) {
 		struct ast_sip_aor *aor;
 		struct ao2_container *contacts;
 
@@ -910,7 +910,7 @@ static int ami_sip_qualify(struct mansession *s, const struct message *m)
 	}
 
 	aors = ast_strdupa(endpoint->aors);
-	while ((aor_name = strsep(&aors, ","))) {
+	while ((aor_name = strtok_r(NULL, ", ", &aors))) {
 		struct ast_sip_aor *aor;
 		struct ao2_container *contacts;
 
@@ -1098,7 +1098,7 @@ static int qualify_and_schedule_all_cb(void *obj, void *arg, int flags)
 	}
 
 	aors = ast_strdupa(endpoint->aors);
-	while ((aor_name = strsep(&aors, ","))) {
+	while ((aor_name = strtok_r(NULL, ", ", &aors))) {
 		struct ast_sip_aor *aor;
 		struct ao2_container *contacts;
 
